@@ -20,7 +20,7 @@ import java.net.URI;
  * Creates AWS Java SDK v 2.x clients of type {@link T}.
  *
  * @param <S>
- *     the type of an {@link AwsClientBuilder}, who actually creates AWS clients of type {@link T}.
+ *     the type of {@link AwsClientBuilder}, who actually creates AWS clients of type {@link T}.
  * @param <T>
  *     the type of AWS clients this factory creates.
  */
@@ -34,7 +34,7 @@ public final class AWSClientFactory<S extends AwsClientBuilder<S, T>, T> impleme
     @Override
     public T client(final Field field) throws Exception {
         final AWSClient awsClientAnnotation = field.getAnnotation(AWSClient.class);
-        final AWSEndpoint endpoint = awsClientAnnotation.endpoint().newInstance();
+        final AWSEndpoint endpoint = awsClientAnnotation.endpoint().getDeclaredConstructor().newInstance();
 
         validate(endpoint);
 
@@ -50,25 +50,27 @@ public final class AWSClientFactory<S extends AwsClientBuilder<S, T>, T> impleme
         if (field.isAnnotationPresent(AWSAdvancedConfiguration.class)) {
             final AWSAdvancedConfiguration awsAdvancedConfiguration = field.getAnnotation(AWSAdvancedConfiguration.class);
             final ClientOverrideConfiguration clientOverrideConfiguration =
-                awsAdvancedConfiguration.clientOverrideConfigurationFactory().newInstance().create();
+                awsAdvancedConfiguration.clientOverrideConfigurationFactory().getDeclaredConstructor().newInstance().create();
 
             if (null != clientOverrideConfiguration) {
                 awsClientBuilder.overrideConfiguration(clientOverrideConfiguration);
             }
 
             if (awsClientBuilder instanceof AwsSyncClientBuilder) {
-                final SdkHttpClient sdkHttpClient = awsAdvancedConfiguration.sdkHttpClientFactory().newInstance().create();
+                final SdkHttpClient sdkHttpClient =
+                    awsAdvancedConfiguration.sdkHttpClientFactory().getDeclaredConstructor().newInstance().create();
 
                 if (null != sdkHttpClient) {
-                    ((AwsSyncClientBuilder) awsClientBuilder).httpClient(sdkHttpClient);
+                    ((AwsSyncClientBuilder<?, ?>) awsClientBuilder).httpClient(sdkHttpClient);
                 }
             }
 
             if (awsClientBuilder instanceof AwsAsyncClientBuilder) {
-                final SdkAsyncHttpClient sdkAsyncHttpClient = awsAdvancedConfiguration.sdkAsyncHttpClientFactory().newInstance().create();
+                final SdkAsyncHttpClient sdkAsyncHttpClient =
+                    awsAdvancedConfiguration.sdkAsyncHttpClientFactory().getDeclaredConstructor().newInstance().create();
 
                 if (null != sdkAsyncHttpClient) {
-                    ((AwsAsyncClientBuilder) awsClientBuilder).httpClient(sdkAsyncHttpClient);
+                    ((AwsAsyncClientBuilder<?, ?>) awsClientBuilder).httpClient(sdkAsyncHttpClient);
                 }
             }
         }
